snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf-sources.jar.sha1
12540946f042e3c3f7ccfddf406ffd22ebe821b5